--- a/index.html
+++ b/index.html
@@ -84,19 +84,31 @@
               <li>
                 Experienced marketer and graphic designer adept at creating
                 impactful visual content and executing effective marketing
-                strategies while working for Jbugs.
+                strategies while working for JBugs.
               </li>
             </div>
           </ul>
         </div>
       </div>
     </div>
-    <div class="row" style="background-color: transparent; box-shadow: none"></div>
-  </div>
-  <div class="sea-landscape">
-    <img src="images/seafloor3.svg"/>
-  </div>
-  <footer class="footer"><strong>Made with ❤️ by Amanda P.</strong></footer>
+    <div class="row">
+      <div class="column">
+        <!-- Social Media Icons -->
+        <a href="autodesk.com" target="_blank">
+          <img src="images/portfolio-color.svg" alt="Portfolio Logo" style="float: left; margin-right: 10px; height: 50px" />
+        </a>
+        <a href="behance.net/amandalouperez" target="_blank">
+          <img src="images/behance-color.svg" alt="Behance Logo" style="float: left; margin-right: 10px; height: 50px" />
+        </a>
+        <a href="linkedin.com/in/amandalouperez" target="_blank">
+          <img src="images/linkedin-color.svg" alt="LinkedIn Logo" style="float: left; margin-right: 10px; height: 50px" />
+        </a>
+      </div>
+    </div>
+    <div class="sea-landscape">
+      <img src="images/seafloor3.svg" />
+    </div>
+    <footer class="footer"><strong>Made with ❤️ by Amanda P.</strong></footer>
 </body>
 
 </html>
