🐠 just keep swimming

--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
     <div class="row">
       <div class="column">
         <!-- Social Media Icons -->
-        <a href="autodesk.com" target="_blank">
+        <a href="https://amandalouperez.myportfolio.com/" target="_blank">
           <img src="images/portfolio-color.svg" alt="Portfolio Logo" style="float: left; margin-right: 10px; height: 50px" />
         </a>
-        <a href="behance.net/amandalouperez" target="_blank">
+        <a href="https://behance.net/amandalouperez" target="_blank">
           <img src="images/behance-color.svg" alt="Behance Logo" style="float: left; margin-right: 10px; height: 50px" />
         </a>
-        <a href="linkedin.com/in/amandalouperez" target="_blank">
+        <a href="https://linkedin.com/in/amandalouperez" target="_blank">
           <img src="images/linkedin-color.svg" alt="LinkedIn Logo" style="float: left; margin-right: 10px; height: 50px" />
         </a>
       </div>
