--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 
 <head>
   <title>🧜‍♀️ Amanda Perez</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta description="Amanda Perez's personal website" />
-  <meta keywords="AmandaLouisePerez.com, Amanda Perez, Graphic Design, Figma, Adobe XD, Akamai, Marketing" />
-  <link rel="stylesheet" href="stylesheet.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Amanda Perez's personal website">
+  <meta name="keywords"
+    content="AmandaLouisePerez.com, Amanda Perez, Graphic Design, Figma, Adobe XD, Akamai, Marketing">
+  <link rel="stylesheet" href="stylesheet.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -29,18 +30,14 @@
     <div class="blinking-star-9"></div>
     <div class="blinking-star-10"></div>
     <div class="ripple">
-      <img src="images/Ripple.svg" />
+      <img src="images/Ripple.svg">
     </div>
     <div class="row" style="background-color: transparent; box-shadow: none"></div>
     <div class="row">
       <div class="column">
         <h2>🪸 About me</h2>
         <p>
-          👋 Hello! 🌊 I'm Amanda Perez, a passionate marketer 🎯 who finds
-          inspiration in the vast expanse of the digital ocean. 💙 With a deep
-          love for Figma and Adobe XD 🎨, I create captivating designs that
-          ride the waves of creativity and effectively communicate brand
-          messages. Let's dive into the depths of marketing together! 🌊🐠
+          Hello world! 👩‍💻 I'm Amanda Perez, a passionate marketer 🎯 who finds inspiration in the vast expanse of the digital ocean. 💙 With a deep love for Figma and Adobe XD 🎨, I create captivating designs that ride the waves of creativity and effectively communicate brand messages. Let's dive into the depths of marketing together! 🌊🐠
         </p>
       </div>
     </div>
@@ -49,7 +46,7 @@
         <h2>Education</h2>
         <div style="display: flex; align-items: center">
           <img src="images/MiraCostaCollege.svg" alt="MiraCosta College Logo"
-            style="float: left; margin-right: 10px; height: 100px" />
+            style="float: left; margin-right: 10px; height: 85px">
           <ul>
             <li>
               <strong>
@@ -70,7 +67,7 @@
       <div class="column">
         <h2>Professional Experience</h2>
         <div style="display: flex; align-items: center">
-          <img src="images/JBugs.png" alt="JBugs Logo" style="float: left; margin-right: 10px; height: 100px" />
+          <img src="images/JBugs.png" alt="JBugs Logo" style="float: left; margin-right: 10px; height: 100px">
           <ul>
             <li>
               <strong>
@@ -89,24 +86,47 @@
             </div>
           </ul>
         </div>
+        <div style="display: flex; align-items: center; padding-top: 25px;">
+          <img src="images/JBugs.png" alt="JBugs Logo" style="float: left; margin-right: 10px; height: 100px">
+          <ul>
+            <li>
+              <strong>
+                <h3>Student Voulenteer</h3>
+              </strong>
+            </li>
+            <div class="date">
+              <li>2022 - Present</li>
+            </div>
+            <div class="description">
+              <li>
+                Experienced marketer and graphic designer adept at creating
+                impactful visual content and executing effective marketing
+                strategies while working for JBugs.
+              </li>
+            </div>
+          </ul>
+        </div>
       </div>
     </div>
     <div class="row">
       <div class="column">
         <!-- Social Media Icons -->
         <a href="https://amandalouperez.myportfolio.com/" target="_blank">
-          <img src="images/portfolio-color.svg" alt="Portfolio Logo" style="float: left; margin-right: 10px; height: 50px" />
+          <img src="images/portfolio-color.svg" alt="Portfolio Logo"
+            style="float: left; margin-right: 10px; height: 50px">
         </a>
         <a href="https://behance.net/amandalouperez" target="_blank">
-          <img src="images/behance-color.svg" alt="Behance Logo" style="float: left; margin-right: 10px; height: 50px" />
+          <img src="images/behance-color.svg" alt="Behance Logo"
+            style="float: left; margin-right: 10px; height: 50px">
         </a>
         <a href="https://linkedin.com/in/amandalouperez" target="_blank">
-          <img src="images/linkedin-color.svg" alt="LinkedIn Logo" style="float: left; margin-right: 10px; height: 50px" />
+          <img src="images/linkedin-color.svg" alt="LinkedIn Logo"
+            style="float: left; margin-right: 10px; height: 50px">
         </a>
       </div>
     </div>
     <div class="sea-landscape">
-      <img src="images/seafloor3.svg" />
+      <img src="images/seafloor3.svg">
     </div>
     <footer class="footer"><strong>Made with ❤️ by Amanda P.</strong></footer>
 </body>
