--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <title>🧜‍♀️ Amanda Perez</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Amanda Perez's personal website">
-  <meta name="keywords"
-    content="AmandaLouisePerez.com, Amanda Perez, Graphic Design, Figma, Adobe XD, Akamai, Marketing">
+  <meta name="keywords" content="AmandaLouisePerez.com, Amanda Perez, Graphic Design, Figma, Adobe XD, Akamai, Marketing">
   <link rel="stylesheet" href="stylesheet.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,81 +29,76 @@
     <div class="blinking-star-9"></div>
     <div class="blinking-star-10"></div>
     <div class="ripple">
-      <img src="images/Ripple.svg">
-    </div>
+      <img src="images/Ripple.svg" alt="Wave Ripple">
+  </div>
     <div class="row" style="background-color: transparent; box-shadow: none"></div>
     <div class="row">
       <div class="column">
         <h2>🪸 About me</h2>
         <p>
-          Hello world! 👩‍💻 I'm Amanda Perez, a passionate marketer 🎯 who finds inspiration in the vast expanse of the digital ocean. 💙 With a deep love for Figma and Adobe XD 🎨, I create captivating designs that ride the waves of creativity and effectively communicate brand messages. Let's dive into the depths of marketing together! 🌊🐠
+          Hello world! 👩‍💻 I'm Amanda Perez, a passionate marketer 🎯 who finds inspiration in the vast expanse of the
+          digital ocean. 💙 With a deep love for Figma and Adobe XD 🎨, I create captivating designs that ride the waves
+          of creativity and effectively communicate brand messages. Let's dive into the depths of marketing together!
+          🌊🐠
         </p>
       </div>
     </div>
     <div class="row">
       <div class="column">
-        <h2>Education</h2>
+        <h2>📚 Education</h2>
         <div style="display: flex; align-items: center">
           <img src="images/MiraCostaCollege.svg" alt="MiraCosta College Logo"
             style="float: left; margin-right: 10px; height: 85px">
           <ul>
             <li>
-              <strong>
-                <h3>Mira Costa College</h3>
-              </strong>
+              <h3> MiraCosta College</h3>
+              <div class="date">2022 - 2024</div>
             </li>
-            <div class="date">
-              <li>2022 - 2024</li>
-            </div>
-            <div class="description">
-              <li><em>Associate of Arts in Marketing</em></li>
-            </div>
+            <li>
+              <div class="description">
+              <em>Associate of Arts in Marketing</em>
+              </div>
+            </li>
           </ul>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="column">
-        <h2>Professional Experience</h2>
+        <h2>📊 Professional Experience</h2>
         <div style="display: flex; align-items: center">
           <img src="images/JBugs.png" alt="JBugs Logo" style="float: left; margin-right: 10px; height: 100px">
           <ul>
             <li>
-              <strong>
-                <h3>Graphic Designer</h3>
-              </strong>
+              <h3>Graphic Designer</h3>
+              <div class="date">2013 - 2022
+              </div>
             </li>
-            <div class="date">
-              <li>2013 - 2022</li>
-            </div>
-            <div class="description">
-              <li>
+            <li>
+              <div class="description">
                 Experienced marketer and graphic designer adept at creating
                 impactful visual content and executing effective marketing
                 strategies while working for JBugs.
-              </li>
-            </div>
-          </ul>
+              </div>
+            </li>
+          </ul>    
         </div>
         <div style="display: flex; align-items: center; padding-top: 25px;">
           <img src="images/JBugs.png" alt="JBugs Logo" style="float: left; margin-right: 10px; height: 100px">
           <ul>
             <li>
-              <strong>
-                <h3>Student Voulenteer</h3>
-              </strong>
+              <h3>Student Volunteer</h3>
+              <div class="date">2022 - Present
+              </div>
             </li>
-            <div class="date">
-              <li>2022 - Present</li>
-            </div>
-            <div class="description">
-              <li>
+            <li>
+              <div class="description">
                 Experienced marketer and graphic designer adept at creating
                 impactful visual content and executing effective marketing
                 strategies while working for JBugs.
-              </li>
-            </div>
-          </ul>
+              </div>
+            </li>
+          </ul>    
         </div>
       </div>
     </div>
@@ -116,8 +110,7 @@
             style="float: left; margin-right: 10px; height: 50px">
         </a>
         <a href="https://behance.net/amandalouperez" target="_blank">
-          <img src="images/behance-color.svg" alt="Behance Logo"
-            style="float: left; margin-right: 10px; height: 50px">
+          <img src="images/behance-color.svg" alt="Behance Logo" style="float: left; margin-right: 10px; height: 50px">
         </a>
         <a href="https://linkedin.com/in/amandalouperez" target="_blank">
           <img src="images/linkedin-color.svg" alt="LinkedIn Logo"
@@ -126,9 +119,9 @@
       </div>
     </div>
     <div class="sea-landscape">
-      <img src="images/seafloor3.svg">
+      <img src="images/seafloor3.svg" alt="Sea Floor">
     </div>
-    <footer class="footer"><strong>Made with ❤️ by Amanda P.</strong></footer>
+    <footer class="footer"><h3>Made with ❤️ by Amanda P.</h3>
+    </footer>
 </body>
-
 </html>
