--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <title>🧜‍♀️ Amanda Perez</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Amanda Perez's personal website">
-  <meta name="keywords" content="AmandaLouisePerez.com, Amanda Perez, Graphic Design, Figma, Adobe XD, Akamai, Marketing">
+  <meta name="keywords"
+    content="AmandaLouisePerez.com, Amanda Perez, Graphic Design, Figma, Adobe XD, Akamai, Marketing">
   <link rel="stylesheet" href="stylesheet.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +31,7 @@
     <div class="blinking-star-10"></div>
     <div class="ripple">
       <img src="images/Ripple.svg" alt="Wave Ripple">
-  </div>
+    </div>
     <div class="row" style="background-color: transparent; box-shadow: none"></div>
     <div class="row">
       <div class="column">
@@ -56,7 +57,7 @@
             </li>
             <li>
               <div class="description">
-              <em>Associate of Arts in Marketing</em>
+                <em>Associate of Arts in Marketing</em>
               </div>
             </li>
           </ul>
@@ -81,7 +82,7 @@
                 strategies while working for JBugs.
               </div>
             </li>
-          </ul>    
+          </ul>
         </div>
         <div style="display: flex; align-items: center; padding-top: 25px;">
           <img src="images/JBugs.png" alt="JBugs Logo" style="float: left; margin-right: 10px; height: 100px">
@@ -98,7 +99,7 @@
                 strategies while working for JBugs.
               </div>
             </li>
-          </ul>    
+          </ul>
         </div>
       </div>
     </div>
@@ -121,7 +122,10 @@
     <div class="sea-landscape">
       <img src="images/seafloor3.svg" alt="Sea Floor">
     </div>
-    <footer class="footer"><h3>Made with ❤️ by Amanda P.</h3>
+    <footer class="footer">
+      <h3>Made with ❤️ by Amanda P.</h3>
     </footer>
+  </div>
 </body>
+
 </html>
