--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
           </ul>
         </div>
         <div style="display: flex; align-items: center; padding-top: 25px;">
-          <img src="images/JBugs.png" alt="JBugs Logo" style="float: left; margin-right: 10px; height: 100px">
+          <img src="images/policeofficer-logo.svg" alt="Police Officer Logo"
+            style="float: left; margin-right: 10px; height: 150px">
           <ul>
             <li>
               <h3>Student Volunteer</h3>
@@ -94,35 +95,29 @@
             </li>
             <li>
               <div class="description">
-                Experienced marketer and graphic designer adept at creating
-                impactful visual content and executing effective marketing
-                strategies while working for JBugs.
+                Currently colaborating on the design and implementation of a start-up company that aims to bridge the
+                gap between technology and the future of policing in the United States.
               </div>
             </li>
           </ul>
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="column">
-        <!-- Social Media Icons -->
-        <a href="https://amandalouperez.myportfolio.com/" target="_blank">
-          <img src="images/portfolio-color.svg" alt="Portfolio Logo"
-            style="float: left; margin-right: 10px; height: 50px">
-        </a>
-        <a href="https://behance.net/amandalouperez" target="_blank">
-          <img src="images/behance-color.svg" alt="Behance Logo" style="float: left; margin-right: 10px; height: 50px">
-        </a>
-        <a href="https://linkedin.com/in/amandalouperez" target="_blank">
-          <img src="images/linkedin-color.svg" alt="LinkedIn Logo"
-            style="float: left; margin-right: 10px; height: 50px">
-        </a>
-      </div>
-    </div>
     <div class="sea-landscape">
       <img src="images/seafloor3.svg" alt="Sea Floor">
     </div>
     <footer class="footer">
+      <!-- Social Media Icons -->
+      <a href="https://amandalouperez.myportfolio.com/" target="_blank">
+        <img src="images/portfolio-color.svg" alt="Portfolio Logo" style="margin-right: 20px; height: 50px">
+      </a>
+      <a href="https://behance.net/amandalouperez" target="_blank">
+        <img src="images/behance-color.svg" alt="Behance Logo" style="margin-right: 20px; height: 50px">
+      </a>
+      <a href="https://linkedin.com/in/amandalouperez" target="_blank">
+        <img src="images/linkedin-color.svg" alt="LinkedIn Logo" style="margin-right: 10px; height: 50px">
+      </a>
+      
       <h3>Made with ❤️ by Amanda P.</h3>
     </footer>
   </div>
