--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
 <head>
   <title>🧜‍♀️ Amanda Perez</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Amanda Perez's personal website">
   <meta name="keywords"
@@ -37,7 +41,7 @@
       <div class="column">
         <h2>🪸 About me</h2>
         <p>
-          Hello world! 👩‍💻 I'm Amanda Perez, a passionate marketer 🎯 who finds inspiration in the vast expanse of the
+          Hello! 👋 I'm Amanda Perez, a passionate marketer 🎯 who finds inspiration in the vast expanse of the
           digital ocean. 💙 With a deep love for Figma and Adobe XD 🎨, I create captivating designs that ride the waves
           of creativity and effectively communicate brand messages. Let's dive into the depths of marketing together!
           🌊🐠
