--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <html lang="en">
 
 <head>
-  <title>🧜‍♀️ Amanda Perez</title>
+  <title>Amanda Perez</title>
   <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
