--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </li>
             <li>
               <div class="description">
-                Currently colaborating on the design and implementation of a start-up company that aims to bridge the
+                Currently collaborating on the design and implementation of a start-up company that aims to bridge the
                 gap between technology and the future of policing in the United States.
               </div>
             </li>
