--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h2>📚 Education</h2>
         <div style="display: flex; align-items: center">
           <img src="images/MiraCostaCollege.svg" alt="MiraCosta College Logo"
-            style="float: left; margin-right: 10px; height: 85px">
+            style="float: left; margin-right: 10px; height: 90px">
           <ul>
             <li>
               <h3> MiraCosta College</h3>
@@ -62,6 +62,21 @@
             <li>
               <div class="description">
                 <em>Associate of Arts in Marketing</em>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div style="display: flex; align-items: center; padding-top: 25px;">
+          <img src="images/MiraCostaCollege.svg" alt="MiraCosta College Logo"
+            style="float: left; margin-right: 10px; height: 90px">
+          <ul>
+            <li>
+              <h3> MiraCosta College</h3>
+              <div class="date">2022 - 2024</div>
+            </li>
+            <li>
+              <div class="description">
+                <em>Associate of Arts in Web Development and Design</em>
               </div>
             </li>
           </ul>
