--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h2>📚 Education</h2>
         <div style="display: flex; align-items: center">
           <img src="images/MiraCostaCollege.svg" alt="MiraCosta College Logo"
-            style="float: left; margin-right: 10px; height: 90px">
+            style="float: left; margin-right: 10px; height: 50px">
           <ul>
             <li>
               <h3> MiraCosta College</h3>
@@ -68,7 +68,7 @@
         </div>
         <div style="display: flex; align-items: center; padding-top: 25px;">
           <img src="images/MiraCostaCollege.svg" alt="MiraCosta College Logo"
-            style="float: left; margin-right: 10px; height: 90px">
+            style="float: left; margin-right: 10px; height: 50px">
           <ul>
             <li>
               <h3> MiraCosta College</h3>
@@ -87,7 +87,7 @@
       <div class="column">
         <h2>📊 Professional Experience</h2>
         <div style="display: flex; align-items: center">
-          <img src="images/JBugs.png" alt="JBugs Logo" style="float: left; margin-right: 10px; height: 100px">
+          <img src="images/JBugs.png" alt="JBugs Logo" style="float: left; margin-right: 10px; height: 50px">
           <ul>
             <li>
               <h3>Graphic Designer</h3>
@@ -96,7 +96,7 @@
             </li>
             <li>
               <div class="description">
-                Experienced marketer and graphic designer adept at creating
+                Experienced marketer and graphic designer skilled at creating
                 impactful visual content and executing effective marketing
                 strategies while working for JBugs.
               </div>
@@ -105,7 +105,7 @@
         </div>
         <div style="display: flex; align-items: center; padding-top: 25px;">
           <img src="images/policeofficer-logo.svg" alt="Police Officer Logo"
-            style="float: left; margin-right: 10px; height: 150px">
+            style="float: left; margin-right: 10px; height: 80px">
           <ul>
             <li>
               <h3>Student Volunteer</h3>
