--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Amanda Perez's personal website">
   <meta name="keywords"
-    content="AmandaLouisePerez.com, Amanda Perez, Graphic Design, Figma, Adobe XD, Akamai, Marketing">
+    content="AmandaLouisePerez.com, Amanda Perez, Amanda Louise Perez, Experienced Graphic Designer, Inkscape Artist, Adobe Suite, Adobe XD, Figma, Akamai, Marketing, MiraCosta College Student ">
   <link rel="stylesheet" href="stylesheet.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
