--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       <div class="column">
         <h2>🪸 About me</h2>
         <p>
-          Hello! 👋 I'm Amanda Perez, a passionate marketer 🎯 who finds inspiration in the vast expanse of the
-          digital ocean. 💙 With a deep love for Figma and Adobe XD 🎨, I create captivating designs that ride the waves
+          Hello! I'm Amanda Perez, a passionate marketer who finds inspiration in the vast expanse of the
+          digital ocean. 💙 With a deep love for Figma and Adobe XD, I create captivating designs that ride the waves
           of creativity and effectively communicate brand messages. Let's dive into the depths of marketing together!
-          🌊🐠
+          🐠
         </p>
       </div>
     </div>
@@ -127,14 +127,17 @@
     </div>
     <footer class="footer">
       <!-- Social Media Icons -->
+      <a href="https://github.com/Amanderspanders" target="_blank">
+        <img src="images/github-mark-white.svg" alt="GitHub Logo" style="margin-right: 20px; height: 40px">
+      </a>
       <a href="https://linkedin.com/in/amandalouperez" target="_blank">
-        <img src="images/linkedin-color.svg" alt="LinkedIn Logo" style="margin-right: 20px; height: 50px">
+        <img src="images/linkedin-color.svg" alt="LinkedIn Logo" style="margin-right: 20px; height: 40px">
       </a>
       <a href="https://amandalouperez.myportfolio.com/" target="_blank">
-        <img src="images/portfolio-color.svg" alt="Portfolio Logo" style="margin-right: 20px; height: 50px">
+        <img src="images/portfolio-color.svg" alt="Portfolio Logo" style="margin-right: 20px; height: 40px">
       </a>
       <a href="https://behance.net/amandalouperez" target="_blank">
-        <img src="images/behance-color.svg" alt="Behance Logo" style="margin-right: 20px; height: 50px">
+        <img src="images/behance-color.svg" alt="Behance Logo" style="margin-right: 20px; height: 40px">
       </a>
       <h3>Made with ❤️ by Amanda P.</h3>
     </footer>
